test_fixtures/if/fun_in_else.lox
// ParserError: UnexpectedExpressionToken found Fun from l2c22 to l2c25
if (true) "ok"; else fun foo() {}
